# wtcc_bot

./: .env.sample  .gitignore  Pipfile  README.md  course_info.py  pyproject.toml  requirements.txt  rmp_info.py  transfer_info.py  wtcc-bot.py  wtcc_bot.py
.github/ISSUE_TEMPLATE/: bug_report.md
