[tool.poetry]
name = "wtcc_bot"
version = "0.7.0"
description = "The WTCC bot is a Discord bot which pulls information from Wake Tech's course descriptions and RateMyProfessors.com."
authors = ["David Fuentes <hello@linuxsysadmin.io>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.25.0"
lxml = "^4.6.3"
ratemyprofessorapi = {git = "https://github.com/Nobelz/RateMyProfessorAPI.git"}
py-cord = {git = "https://github.com/Pycord-Development/pycord", rev = "feature/slash"}
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
